--- a/MapsThing/app/src/main/res/menu/routes.xml
+++ b/MapsThing/app/src/main/res/menu/routes.xml
@@ -1,8 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:compat="http://schemas.android.com/apk/res-auto"
     tools:context="phillipcarter.com.mapsthing.ui.RoutesActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_white_48dp"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:title="@string/action_search"
+        compat:showAsAction="ifRoom" />
 </menu>
